[project]
name = "algorithm-python"
version = "0.2.0"
description = "Implementation of algorithm and classic leetcode problems by python."
authors = [{ name = "sihaixianyu", email = "sihaixianyu@gmail.com" }]

[tool.ruff]
line-length = 120

[tool.pyright]
reportArgumentType = false
reportAttributeAccessIssue = false
reportGeneralTypeIssues = false
